Added table of contents in the markdown cells

--- a/Twitter Sentiment Analysis.ipynb
+++ b/Twitter Sentiment Analysis.ipynb
@@ -19,6 +19,26 @@
     "3. Recall \n",
     "\n",
     "### 1.3 Source \n",
+    "The dataset is taken from Kaggle. It is available in the website below. Feel free to download the dataset. \n",
+    "\n",
+    "https://www.kaggle.com/c/tweet-sentiment-extraction/data\n",
+    "\n",
+    "## Table of Contents\n",
+    "\n",
+    "1. Reading the data\n",
+    "2. Countplot of the Sentiment\n",
+    "3. Positive Text WordCloud\n",
+    "4. Negative Text WordCloud\n",
+    "5. List of Stopwords\n",
+    "6. Dividing the data into training and Cross Validation Data\n",
+    "7. Function for Replacing Words\n",
+    "8. Preprocessing the Text\n",
+    "9. Tfidf Vectorizer\n",
+    "10. Neural Network Model for Prediction \n",
+    "11. Count Vectorizer\n",
+    "12. Neural Network Model \n",
+    "13. Plots of the Results \n",
+    "14. Conclusion\n",
     "\n",
     "\n",
     "Let us now start the project by reading some useful libraries that we would be working with from the start. "
@@ -76,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reading the data \n",
+    "## 1. Reading the data \n",
     "\n",
     "We would be first reading the data that is present in the kaggle repository to ensure that we work with it. "
    ]
@@ -337,7 +357,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Countplot of the Sentiment \n",
+    "## 2. Countplot of the Sentiment \n",
     "\n",
     "As can be seen, there seems to be more neutral sentiment in the text compared to positive or negative tweets. That is true in real life as most of the tweets would be quite neutral without them being either too positive or too negative respectively. "
    ]
@@ -1433,7 +1453,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Positive Text WordCloud \n",
+    "## 3. Positive Text WordCloud \n",
     "\n",
     "Worcloud gives us a good idea about the number of repeating words by the size of them. We see that there are some positive words such as \"thank\" and \"good \"which make up most of the positive reviews. There are also some words that occur quite rare such as \"awesome\" but these words also make a mark in the decisions respectively. In addition to this, we also find that there are very few words that are negative in the positive text. Therefore, we can conclude that words are a good indication of the polarity and sentiment of the text respectively. "
    ]
@@ -1527,7 +1547,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Negative Text WordCloud \n",
+    "## 4. Negative Text WordCloud \n",
     "\n",
     "As can be seen in the wordcloud, there are some words such as \"miss\" and \"no\" which are considered to be negative respectively. In addition to this, we see that there are some words such as \"work\" and \"sorry\" that also tend to be negative as this is quite true in real-life where we say \"sorry\" for some negative things done and so on. Therefore, getting the wordcloud would ensure that we get to know the words present in the wordcloud dictionary and ensure that we understand the full context of the review respectively. "
    ]
@@ -1903,7 +1923,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## List of Stopwords\n",
+    "## 5. List of Stopwords\n",
     "\n",
     "Let us now make a list of all the stopwords that we are going to be using for our machine learning purposes. We see that there are some good list of stopwords that I have taken from the link that is provided in the below cell. These would be used for the stopwords and ensure that we are getting the best results respectively. "
    ]
@@ -2196,7 +2216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dividing the Data into Training and Cross Validation Data \n",
+    "## 6. Dividing the Data into Training and Cross Validation Data \n",
     "\n",
     "Now we are going to be dividing the data into training and cross validation data and ensure that we understand the machine learning model well. We are going to be dividing the data into 2 parts where 70 percent of the data is taken as the training data and the 30 percent of the data would be taken as the test data. There is a random state assigned to it and split to ensure that we get a good accuracy. "
    ]
@@ -2278,7 +2298,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Function for Replacing Words\n",
+    "## 7. Function for Replacing Words\n",
     "\n",
     "There is a separate function that is being used to replace the words and substitute them with the other words to ensure that we get the best machine learning results respectively. "
    ]
@@ -2347,7 +2367,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Preprocessing the Text \n",
+    "## 8. Preprocessing the Text \n",
     "\n",
     "It is now time to preprocess the text and understand the output. We are going to be using the above functions and also estimate the time it takes to complete the entire preprocessing respectively. Taking into account the different preprocessing text values, we are going to be appending those values and understanding the output respectively. "
    ]
