made a few changes in the markdown cells

--- a/Twitter Sentiment Analysis.ipynb
+++ b/Twitter Sentiment Analysis.ipynb
@@ -2796,7 +2796,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tfidf Vectorizer\n",
+    "## 9. Tfidf Vectorizer\n",
     "\n",
     "With the help of Tfidf Vectorizer, it is easy to convert the text into the form of vector based on the word frequency and the inverse document frequency and get those values which could be fed to the machine learning models for prediction respectively. Having a look at those values, we are going to be taking them and predicting using the machine learning approach. "
    ]
@@ -2881,7 +2881,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Neural Network Model for Prediction \n",
+    "## 10. Neural Network Model for Prediction \n",
     "\n",
     "We are going to be defining the neural network model and predicting the chances of a person suffering from a heart disease. Taking a look at the data, we see that there are different activation units that we are going to be working with and then, we are going to use the categorical cross entropy as this is a multiclass classification problem. There can be more metrics that we might take but let us deal with accuracy for now and use the adam optimizer respectively. "
    ]
@@ -3936,7 +3936,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Count Vectorizer\n",
+    "## 11. Count Vectorizer\n",
     "\n",
     "Now we are going to be using the bag of words to understand the text and get a good knowledge about it. Since the data that is given to the machine learning models need to be in the form of vectors, it would be good to convert the text values into different vectors so that it becomes easy for the machine learning models to perform the computations respectively."
    ]
@@ -4075,7 +4075,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Neutral Network Model \n",
+    "## 12. Neutral Network Model \n",
     "\n",
     "We would now be using the deep neural networks that we are going to be learning and ensure that we are getting the best predictions respectively. We would start with 100 neutrons from the first layer and followed by 25 neutrons in the second layer and 10 units in the third layer followed by 3 final layers which we are going to be using the softmax classifier for predictions respectively. "
    ]
@@ -4171,7 +4171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plots of the Results \n",
+    "## 13. Plots of the Results \n",
     "\n",
     "We would now be looking at the deep neural network plots and see how the values of accuracy and loss change with respect to the number of epochs that we are running. We see that as the number of epochs increase, there seems to be overfitting where the cross validation loss tends to go higher though there is a decrease in the training loss respectively. This gives us a clear indication that the model is overfitting after certain number of epochs are met. Therefore, we would be taking the right number of epochs when we are performing the machine learning analysis. "
    ]
@@ -4223,7 +4223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conclusions \n",
+    "## 14. Conclusions \n",
     "\n",
     "1. It would be a good idea to use some tools such as wordcloud when we are doing Natural Language Processing (NLP) to ensure that we are getting the best results for predictions respectively. We would be able to understand the frequently occurring words from the less frequently occurring words by the size of the words that are plotted in the wordcloud respectively. \n",
     "2. Steps should be taken to ensure that the model does not overfit or underfit. This ensures that the best predictions are being generated and therefore, we are going to get the best outputs respectively. \n",
